Prevent too big newsletter field

--- a/web/css/layout/_newsletter.less
+++ b/web/css/layout/_newsletter.less
@@ -13,5 +13,8 @@
         label .label {
             display: none;
         }
+        .field {
+            max-width: 270px;
+        }
     }
 }
